<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Transi</string>

    <string name="new_version">Update available</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="install">Install</string>
    <string name="refresh">Refresh</string>
    <string name="retry">Try again</string>
    <string name="update_in_progress">Update in progress</string>
    <string name="update_downloaded">Update downloaded</string>
    <string name="downloading">Downloading %1$s</string>
    <string name="finish_update">Finish update by installing new version</string>
    <string name="no_connection">No internet connection available</string>
    <string name="network_error">Network error</string>
    <string name="no_location">GPS location no available yet</string>

    <string name="search">Search for stops</string>
    <string name="stop_icon">stop_icon</string>
    <string name="locating_nearest_stop">Locating nearest stop…</string>
    <string name="actualTime">%1$s:%2$s:%3$s</string>
    <string name="enable_disable_switching_table_for_nearest_stop">enable/disable switching table for nearest stop</string>
    <string name="display_menu">display menu</string>
    <string name="pick_a_date_and_time">pick a date and time</string>
    <string name="from">From…</string>
    <string name="to">To…</string>
    <string name="actual_position">Actual position</string>
    <string name="back">Back</string>

    <string name="timetables">Timetables</string>
    <string name="trams">Trams</string>
    <string name="trolleybuses">Trolleybuses</string>
    <string name="buses">Buses</string>
    <string name="night_lines">Night lines</string>
    <string name="trains">Trains</string>
    <string name="regional_buses">Regional buses</string>
    <string name="directions">%1$ - %2$</string>

    <string name="tripPlanner">Trip Planner</string>
    <string name="tripPlannerTitle">%1$s ▶ %2$s</string>
    <string name="walking_directions">walking directions</string>
    <string name="tripDurationH">%1$s h %2$s min</string>
    <string name="tripDuration">%1$s min</string>
    <string name="tripTime">(%1$s-%2$s)</string>
    <string name="tripHeadsign">%1$s</string>
    <string name="tripStepDuration">%1$d stops, %2$s min</string>

    <string name="error">Error</string>
    <string name="error400">One of given inputs is invalid!</string>
    <string name="error404">Unable to find a trip!</string>
    <string name="unknownError">Something went wrong…</string>
    <string name="ops">Ops…</string>

    <string name="picture_of_vehicle">Picture of vehicle</string>
    <string name="stuck">Stuck</string>
    <string name="ac">AC</string>
    <string name="offline">Offline</string>
    <string name="onTime">on time</string>
    <string name="inAdvance">%1$s min in advance</string>
    <string name="delay">%1$s min delay</string>
    <string name="vehicleText">%1$s #%2$s</string>
    <string name="lastStop">%1$s</string>
    <string name="departureTime">Expected departure: %1$s</string>
    <string name="this_is_a_request_stop">This is a request stop.</string>

    <string name="loading">Loading…</string>
    <string name="connecting">Connecting…</string>
    <string name="reconnecting">Reconnecting…</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="noDepartures">No departures today</string>
    <string name="home" tools:keep="@string/home">home</string>

    <string name="table_notification_channel_id">virtual_table_notifier</string>
    <string name="table_notification_channel_name">Virtual table</string>
    <string name="table_notification_channel_description">Virtual table notifier</string>
    <string name="trip_planner_notification_channel_id">trip_planner_notifier</string>
    <string name="trip_planner_notification_channel_name">Trip planner</string>
    <string name="trip_planner_notification_channel_description">Trip planner notifier</string>

    <string name="table_notification_title">%1$s ▶ %2$s %3$s</string>
    <string name="table_notification_body">Expected departure: %1$s&lt;br>Last stop: %2$s&lt;br>%3$s %4$s&lt;br>&lt;br>%5$s
    </string>
    <string name="table_notification_body_offline">Expected departure: %1$s&lt;br>offline</string>
    <string name="table_share_body">&lt;b>%1$s ▶ %2$s&lt;/b>&lt;br>Departure from %3$s: %4$s&lt;br>Last stop: %5$s&lt;br>%6$s %7$s&lt;br>&lt;br>%8$s</string>
    <string name="table_share_body_offline">&lt;b>%1$s ▶ %2$s&lt;/b>&lt;br>Departure from %3$s: %4$s&lt;br>offline</string>
    <string name="dismiss">Dismiss</string>
    <string name="share">Share</string>
    <string name="trip_notification_title">%1$s ▶ %2$s</string>
    <string name="trip_notification_body">%1$s (%2$s-%3$s)</string>
    <string name="trip_share_body">%1$s&lt;br>&lt;br>%2$s</string>
    <string name="placeholderLine">N999</string>
    <string name="example">Example</string>
    <string name="examplePlatform">XX</string>
    <string name="departure_icon">departureIcon</string>
    <string name="no_routes">No routes at this time</string>
</resources>