<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/AlertTextContainer"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/AlertTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/ops"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/AlertText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/unknownError"
            app:layout_constraintTop_toBottomOf="@id/AlertTitle"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/AlertProgress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:min="0"
            android:max="100"
            android:paddingVertical="10dp"
            android:visibility="gone"
            app:trackCornerRadius="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/AlertText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/AlertCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:visibility="gone"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@id/AlertConfirmButton"
        app:layout_constraintRight_toLeftOf="@id/AlertConfirmButton"
    />

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/AlertConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        app:layout_constraintTop_toBottomOf="@id/AlertTextContainer"
        app:layout_constraintRight_toRightOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>