<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TimetablesFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TimetablesLoadingIndicator"
            app:layout_constraintTop_toTopOf="parent"
            android:indeterminate="true" />

    <ScrollView
            android:orientation="vertical"
            android:id="@+id/TimetablesContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/TimetablesLoadingIndicator"
            app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".TimetablesFragment">

            <TextView
                    android:id="@+id/TimetablesTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/timetables"
                    android:textSize="26sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            <TextView
                    android:id="@+id/TimetableTramsTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/trams"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TimetablesTitle" />

            <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/TimetableTramsLines"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="15dp"
                    app:flexWrap="wrap"
                    app:alignItems="flex_start"
                    app:alignContent="flex_start"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TimetableTramsTitle" />

            <TextView
                    android:id="@+id/TimetableTrolleybusesTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/trolleybuses"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TimetableTramsLines" />

            <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/TimetableTrolleybusesLines"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="15dp"
                    app:flexWrap="wrap"
                    app:alignItems="flex_start"
                    app:alignContent="flex_start"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TimetableTrolleybusesTitle" />

            <TextView
                    android:id="@+id/TimetableBusesTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/buses"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TimetableTrolleybusesLines" />

            <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/TimetableBusesLines"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="15dp"
                    app:flexWrap="wrap"
                    app:alignItems="flex_start"
                    app:alignContent="flex_start"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TimetableBusesTitle" />

            <TextView
                    android:id="@+id/TimetableNightLinesTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/night_lines"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TimetableBusesLines" />

            <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/TimetableNightLinesLines"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="15dp"
                    app:flexWrap="wrap"
                    app:alignItems="flex_start"
                    app:alignContent="flex_start"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TimetableNightLinesTitle" />

            <TextView
                    android:id="@+id/TimetableTrainsTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/trains"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TimetableNightLinesLines" />

            <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/TimetableTrainsLines"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="15dp"
                    app:flexWrap="wrap"
                    app:alignItems="flex_start"
                    app:alignContent="flex_start"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TimetableTrainsTitle" />

            <TextView
                    android:id="@+id/TimetableRegionalBusesTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/regional_buses"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TimetableTrainsLines" />

            <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/TimetableRegionalBusesLines"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="15dp"
                    app:flexWrap="wrap"
                    app:alignItems="flex_start"
                    app:alignContent="flex_start"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TimetableRegionalBusesTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/TimetablesError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/TimetablesLoadingIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            android:alpha="0.7">

        <ImageView
                android:id="@+id/TimetablesErrorIcon"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:contentDescription="@string/stop_icon"
                android:background="@drawable/ic_warning"
                android:backgroundTint="?colorOutline"
                android:layout_gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/TimetablesErrorText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        <TextView
                android:id="@+id/TimetablesErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?colorOutline"
                android:text="@string/network_error"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TimetablesErrorIcon"
                app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/TimetablesErrorBtn"
                android:layout_marginTop="50dp"
                android:padding="0dp"
                app:layout_constraintTop_toBottomOf="@id/TimetablesErrorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/retry"
                style="@style/Widget.Material3.Button.ElevatedButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
